feat(recommendation): enhance recommendation system with caching and user preferences management
- Added caching for manga metadata and user preferences using Caffeine.
- Introduced new DTOs for manga metadata and user bookmarks.
- Implemented services for fetching and managing user bookmarks and manga metadata.
- Updated controllers to handle user authentication and provide personalized recommendations.
- Refactored existing code for better separation of concerns and improved readability.

Связанные issues: #95